--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,9 @@
     "import/no-extraneous-dependencies": "off",
     "import/extensions": "off",
     "import/no-cycle": "off",
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "no-trailing-spaces": "off",
+    "react/jsx-one-expression-per-line": "off"
   },
   "ignorePatterns": ["dist/", "build/"]
 }
